--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -10,3 +10,22 @@
 .geovisto-map-container {
     height: 100%;
 }
+
+button {
+    color:whitesmoke;
+    background-color: darkslateblue;
+    border-radius: 12px;
+    display: inline-block;
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
+  
+button:hover {
+    background-color: rgb(58, 50, 114);
+    color: white;
+    cursor: pointer;
+}
