--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -32,6 +32,7 @@ button:hover {
 
 .btn-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: flex-start;
     gap: 10px;
     padding-bottom: 10px;
