--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,39 +1,39 @@
 :root {
     --default-font: "Helvetica Neue", Arial, Helvetica, sans-serif;
-}
-
-.geovisto-map {
-    height: 100%;
-    font-family: var(--default-font);
-}
-
-.geovisto-map-container {
-    height: 100%;
-}
-
-button {
-    color:whitesmoke;
-    background-color: darkslateblue;
-    border-radius: 12px;
-    display: inline-block;
-    border: none;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
   }
   
-button:hover {
-    background-color: rgb(58, 50, 114);
-    color: white;
-    cursor: pointer;
-}
-
-.btn-container {
+  .geovisto-map-styles {
+    height: 85vh;
+    width: 90vw;
+    font-family: var(--default-font);
+  }
+  
+  .demo-footer {
+    height: 10vh;
+    width: 90vw;
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-around;
     gap: 10px;
-    padding-bottom: 10px;
-}
+    padding-top: 10px;
+    
+    .export-btn {
+      color:gray;
+      border-radius: 12px;
+      display: inline-block;
+      background: none;
+      border: 2px solid gray;
+      padding: 10px 100px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 14px;
+      
+      &:hover {
+          background-color: gray;
+          color: whitesmoke;
+          cursor: pointer;
+      }
+    }
+  }
+  
