Edited ImageLayerTool, added comments

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -4,13 +4,13 @@
   
   .geovisto-map-styles {
     height: 85vh;
-    width: 95vw;
+    width: 100%;
     font-family: var(--default-font);
   }
   
   .demo-footer {
     height: 10vh;
-    width: 95vw;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
